# holistic_husky_project

./: README.md
description_for_hololens/husky_description/husky_single/: single_husky_panda.xml  single_husky_panda_other_pose.xml
description_for_hololens/husky_description/robots/: husky_panda_other_pose.urdf  l_husky_with_panda_hand.xml  l_husky_with_panda_hand_other_pose.xml
franka_mujoco/: CMakeLists.txt  package.xml
franka_mujoco/launch/: husky_with_panda.launch  husky_with_panda_2.launch  mm_mjc_simulator.launch  panda_mjc_simulator.launch  panda_mjc_simulator_tq.launch
holistic_action_manager/: CMakeLists.txt  package.xml
holistic_action_manager/action/: Holistic.action
holistic_action_manager/include/holistic_action_manager/controller/: controller.hpp
holistic_action_manager/include/holistic_action_manager/server/: action_server_base.hpp  holistic_server.hpp  joint_posture_action_server.hpp
holistic_action_manager/include/holistic_action_manager/simulator/: simulator.hpp
holistic_action_manager/script/: bridge_client.py  holistic_client.py  se3_client.py
holistic_action_manager/src/: non_holo.cpp
holistic_action_manager/src/controller/: controller.cpp
holistic_action_manager/src/server/: holistic_server.cpp  joint_posture_action_server.cpp
holistic_action_manager/src/simulator/: simulator.cpp
holistic_action_manager/srv/: se3_goal.srv  unity.srv
husky_viz/: CMakeLists.txt  package.xml
husky_viz/launch/: description.launch
mm_description/: CMakeLists.txt  package.xml
mm_description/robots/: scout_sim.xml  scout_with_panda.xml
rci_holistic_controller/: CMakeLists.txt
rci_holistic_controller/include/rci_holistic_controller/math/: math.hpp
rci_holistic_controller/include/rci_holistic_controller/robot/: robot.hpp
rci_holistic_controller/include/rci_holistic_controller/solver/: qp_solver_mm.hpp
rci_holistic_controller/src/math/: math.cpp
rci_holistic_controller/src/robot/: robot.cpp
rci_holistic_controller/src/solver/: qp_solver_mm.cpp
