<?xml version="1.0"?>
<package format="2">
  <name>holistic_action_manager</name>
  <version>0.0.1</version>
  <description>The holistic_action_manager package</description>

  <maintainer email="lee081847@khu.ac.kr">Seulchan Lee</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>

  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>mujoco_ros_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>pinocchio</depend>
  <depend>rci_holistic_controller</depend>
  <depend>tf_conversions</depend>
 
  <exec_depend>ur_description</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>tf</depend>


</package>
